--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "facerecognitionbrain",
+  "homepage": "https://dim4ik787.github.io/faceReactApp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "clarifai": "^2.9.1",
+    "gh-pages": "^5.0.0",
     "particles-bg": "^2.5.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -12,6 +14,8 @@
     "tachyons": "^4.12.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
